Adds fonts and typography styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias aspernatur, corporis esse iste eius error minus, hic non voluptas earum perferendis, autem facilis minima. Vitae, eaque? Quo rem sint debitis.</p>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
