Little change in header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="container-fluide page-header">
+  <header class="container-fluid page-header">
     <div class="header-top row">
       <div class="header-top__left col-6 d-flex">
         <div class="dropdown header-top__language-list">
