Stylizes header-top-left in Bootstrap

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 <body>
   <header class="container-fluid page-header">
-    <div class="header-top row">
-      <div class="header-top__left col-6 d-flex">
+    <div class="header-top row py-2">
+      <div class="header-top__left col-6 d-flex align-items-center">
         <div class="dropdown header-top__language-list">
-          <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
+          <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en pr-2" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
           <div class="dropdown-menu" aria-labelledby="language-dropdown-button">
             <a href="#" class="dropdown-item header-top__language-link lang-en">English</a>
             <a href="#" class="dropdown-item header-top__language-link lang-fr">French</a>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="dropdown header-top__currency-list">
-          <button class="dropdown-toggle header-top__currency-button" id="currency-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eur / €</button>
+          <button class="dropdown-toggle header-top__currency-button px-2 mr-2" id="currency-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eur / €</button>
           <div class="dropdown-menu" aria-labelledby="currency-dropdown-button">
             <a href="#" class="dropdown-item header-top__currency-link">Eur / €</a>
             <a href="#" class="dropdown-item header-top__currency-link">Gbp / £</a>
