--- a/index.html
+++ b/index.html
@@ -43,7 +43,38 @@
         </div>
         <div class="header-top__number-line">Order online or call us <a href="tel:+1800008808">(+1800) 000 8808</a></div>
       </div>      
-      <div class="header-top__right col-6"></div>
+      <div class="header-top__right col-6">
+        <nav class="header-top__navbar navbar navbar-expand">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-responsive-menu" aria-controls="header-responsive-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="header-responsive-menu">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home Page</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ecommerce</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+              <span class="navbar-text ml-auto">
+                <a href="#">BUY THIS THEMEUs</a>
+              </span>
+          </div>
+        </nav>
+      </div>
       <hr>
     </div>
   </header>
