Removes left padding in header top

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
       </div>
       <hr>
     </div>
+    <div class="header-bottom row">
+      <div class="header-bottom__logo"></div>
+      <div class="header-bottom__search"></div>
+      <div class="header-bottom__shop-icons"></div>
+    </div>
   </header>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
