Workin in header top

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <header class="container-fluid page-header">
-    <div class="header-top row py-2">
+    <div class="header-top row px-3">
       <div class="header-top__left col-6 d-flex align-items-center">
         <div class="dropdown header-top__language-list">
           <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en pr-2" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
