--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <header class="container-fluid page-header">
     <div class="header-top row px-3">
-      <div class="header-top__left col-6 d-flex align-items-center">
+      <div class="header-top__left col-4 d-flex align-items-center pl-4">
         <div class="dropdown header-top__language-list">
           <button class="dropdown-toggle header-top__language-button header-top__language-link lang-en pr-2" id="language-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English</button>
           <div class="dropdown-menu" aria-labelledby="language-dropdown-button">
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="dropdown header-top__currency-list">
-          <button class="dropdown-toggle header-top__currency-button px-2 mr-2" id="currency-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eur / €</button>
+          <button class="dropdown-toggle header-top__currency-button px-3 mr-2" id="currency-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eur / €</button>
           <div class="dropdown-menu" aria-labelledby="currency-dropdown-button">
             <a href="#" class="dropdown-item header-top__currency-link">Eur / €</a>
             <a href="#" class="dropdown-item header-top__currency-link">Gbp / £</a>
@@ -41,31 +41,31 @@
             <a href="#" class="dropdown-item header-top__currency-link">Jpy / ¥</a>
           </div>
         </div>
-        <div class="header-top__number-line">Order online or call us <a href="tel:+1800008808">(+1800) 000 8808</a></div>
+        <div class="header-top__number-line ml-1">Order online or call us <a href="tel:+1800008808">(+1800) 000 8808</a></div>
       </div>      
-      <div class="header-top__right col-6">
+      <div class="header-top__right col-8">
         <nav class="header-top__navbar navbar navbar-expand">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-responsive-menu" aria-controls="header-responsive-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="header-responsive-menu">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
+            <ul class="navbar-nav flex-grow-1 mr-5 flex-wrap justify-content-end">
+              <li class="nav-item mr-2 active">
                 <a class="nav-link" href="#">Home Page</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="#">About Us</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Services</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Ecommerce</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Blog</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Contact Us</a>
               </li>
             </ul>
