--- a/index.html
+++ b/index.html
@@ -77,29 +77,29 @@
       </div>
       <hr>
     </div>
-    <div class="header-bottom d-flex justify-content-between py-4">
+    <div class="header-bottom row justify-content-between align-items-center py-4 px-5">
       <div class="header-bottom__logo navbar-brand">
         <img src="img/header-logo.png" alt="Header logo">
       </div>
-      <div class="header-bottom__search form-group">
-        <form class="form-inline">
-          <input class="search__input form-control" type="search" placeholder="Search for product..." aria-label="Search">
-          <select class="search__select form-control" id="search-select">
+      <div class="header-bottom__search col-8">
+        <form class="form-inline row align-items-stretch justify-content-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
+          <input class="search__input form-control input-group-prepend col-7" type="search" placeholder="Search for product..." aria-label="Search">
+          <select class="search__select form-control col-3" id="search-select">
             <option value="all">All categories</option>
             <option value="notebook">Notebook</option>
-            <option value="tablet">tablet</option>
+            <option value="tablet">Tablet</option>
             <option value="e-books">Electronic books</option>
             <option value="computers">Computers</option>
             <option value="components">Components</option>
             <option value="office equip">Office equipment</option>
-            <option value="games">games</option>
+            <option value="games">Games</option>
             <option value="network equip">Network equipment</option>
             <option value="accessories">Accessories</option>
           </select>
-          <button class="search__button btn icon-font-search-solid" type="submit"></button>
+          <button class="search__button btn icon-font-search-solid col-auto" type="submit"></button>
         </div>
       </form>
-      <div class="header-bottom__icons-list d-flex">
+      <div class="header-bottom__icons-list d-flex flex-grow-1 justify-content-end align-items-center">
         <a href="#" class="header-bottom__icon-item icon-font-heart-regular vish-list-popup"></a>
         <div class="vish-list">
           <div class="vish-list__header">
@@ -157,6 +157,7 @@
             <a href="#" class="shopping-cart__checkout-button shopping-cart__btn">Checkout</a>
           </div>
         </div>
+        <span class="header-bottom__total-price">$259.99</span>
       </div>
     </div>
   </header>
