Corrects margins in buttons of language and currency dropdown menu

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="dropdown header-top__currency-list">
-          <button class="dropdown-toggle header-top__currency-button px-3 mr-2" id="currency-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eur / €</button>
+          <button class="dropdown-toggle header-top__currency-button pl-3 mr-2" id="currency-dropdown-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eur / €</button>
           <div class="dropdown-menu" aria-labelledby="currency-dropdown-button">
             <a href="#" class="dropdown-item header-top__currency-link">Eur / €</a>
             <a href="#" class="dropdown-item header-top__currency-link">Gbp / £</a>
