Adds top banners section and creates and stylizes main banner

--- a/index.html
+++ b/index.html
@@ -161,6 +161,29 @@
       </div>
     </div>
   </header>
+  <div class="top-banners container-fluid p-0">
+    <div class="row no-gutters">
+      <div class="top-banners__main-banner-slider col-7">
+        <!-- Copy this slide 4 times  -->
+        <div class="main-banner__slide d-flex align-items-center ml-4">
+          <div class="main-banner__text text-center">
+            <div class="main-banner__category banner__category">popular products</div>
+            <div class="main-banner__title banner__title">TABLET pro</div>
+            <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+            <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+          </div>
+          <img class="main-banner__image mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+        </div>
+        <!-- End slide -->
+      </div>
+      <div class="top-banners__second-banners col-5">
+        <div class="top-banners__second-banner-item top-banners__second-banner-item--top">
+
+        </div>
+        <div class="top-banners__second-banner-item top-banners__second-banner-item--bottom"></div>
+      </div>
+    </div>
+  </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
