--- a/index.html
+++ b/index.html
@@ -163,18 +163,56 @@
   </header>
   <div class="top-banners container-fluid p-0">
     <div class="row no-gutters">
-      <div class="top-banners__main-banner-slider col-7">
-        <!-- Copy this slide 4 times  -->
-        <div class="main-banner__slide d-flex align-items-center ml-4">
-          <div class="main-banner__text text-center">
-            <div class="main-banner__category banner__category">popular products</div>
-            <div class="main-banner__title banner__title">TABLET pro</div>
-            <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
-            <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+      <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ride="carousel">
+        <div class="carousel-inner">
+          <!-- Copy this slide 4 times  -->
+          <div class="main-banner__slide carousel-item active ml-4">
+            <div class="main-banner__text text-center d-inline-block">
+              <div class="main-banner__category banner__category">popular products</div>
+              <div class="main-banner__title banner__title">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+            </div>
+            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
           </div>
-          <img class="main-banner__image mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+          <div class="main-banner__slide carousel-item ml-4">
+            <div class="main-banner__text text-center d-inline-block">
+              <div class="main-banner__category banner__category">popular products</div>
+              <div class="main-banner__title banner__title">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+            </div>
+            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+          </div>
+          <div class="main-banner__slide carousel-item ml-4">
+            <div class="main-banner__text text-center d-inline-block">
+              <div class="main-banner__category banner__category">popular products</div>
+              <div class="main-banner__title banner__title">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+            </div>
+            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+          </div>
+          <div class="main-banner__slide carousel-item ml-4">
+            <div class="main-banner__text text-center d-inline-block">
+              <div class="main-banner__category banner__category">popular products</div>
+              <div class="main-banner__title banner__title">TABLET pro</div>
+              <div class="main-banner__description text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  labore et dolore magna aliqua.  </div>
+              <a href="#" class="btn main-banner__btn custom-btn">Add to bag</a>
+            </div>
+            <img class="main-banner__image d-inline-block mr-3" src="img/main_banner_image-1.png" alt="Product of main banner">
+          </div>
+          <!-- End slide -->
         </div>
-        <!-- End slide -->
+        <!-- Slider controls -->
+        <!-- <a class="carousel-control-prev" href="#main-banner-slider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#main-banner-slider" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a> -->
       </div>
       <div class="top-banners__second-banners col-5">
         <div class="top-banners__second-banner-item top-banners__second-banner-item--top">
