Adds word-break property to main-banner title

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </header>
   <div class="top-banners container-fluid p-0">
     <div class="row no-gutters">
-      <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ride="carousel">
+      <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ide="carousel">
         <!-- Slider dots -->
         <ol class="carousel-indicators main-banner__dot-list">
           <li class="main-banner__dot" data-target="#main-banner-slider" data-slide-to="0" class="active"></li>
