Creates second banners

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </header>
   <div class="top-banners container-fluid p-0">
     <div class="row no-gutters">
-      <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ide="carousel">
+      <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ride="carousel">
         <!-- Slider dots -->
         <ol class="carousel-indicators main-banner__dot-list">
           <li class="main-banner__dot" data-target="#main-banner-slider" data-slide-to="0" class="active"></li>
@@ -221,11 +221,35 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <div class="top-banners__second-banners col-5">
-        <div class="top-banners__second-banner-item top-banners__second-banner-item--top">
-
+      <div class="top-banners__second-banners col-5 d-flex flex-column">
+        <div class="top-banners__second-banner row flex-grow-1 align-items-center">
+          <div class="second-banner__img col-5">
+            <img class="d-block ml-auto" src="img/main_banner_image-2.png" alt="Product in second banner">
+          </div>
+          <div class="second-banner__text col-6 text-center">
+            <div class="banner__category">ACCESSORIES</div>
+            <div class="banner__title second-banner__title">Gateway Watch</div>
+            <div class="item__price-list mb-4">
+              <span class="item__price item__price--old mx-1">$350</span>
+              <span class="item__price item__price--new mx-1">$299,99</span>
+            </div>
+            <div class="btn custom-btn">view more</div>
+          </div>
         </div>
-        <div class="top-banners__second-banner-item top-banners__second-banner-item--bottom"></div>
+        <div class="top-banners__second-banner row flex-grow-1 align-items-center">
+          <div class="second-banner__img col-6 order-1">
+            <img class="d-block mx-auto" src="img/main_banner_image-3.png" alt="Product in second banner">
+          </div>
+          <div class="second-banner__text col-6 text-center">
+            <div class="banner__category">Computers</div>
+            <div class="banner__title second-banner__title">Apple iMac 21.5</div>
+            <div class="item__price-list mb-4">
+              <span class="item__price item__price--old mx-1">$350</span>
+              <span class="item__price item__price--new mx-1">$299,99</span>
+            </div>
+            <div class="btn custom-btn">view more</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
