Fix active state in first dot in main banner slider

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="top-banners__main-banner-slider col-7 carousel slide" id="main-banner-slider" data-ride="carousel">
         <!-- Slider dots -->
         <ol class="carousel-indicators main-banner__dot-list">
-          <li class="main-banner__dot" data-target="#main-banner-slider" data-slide-to="0" class="active"></li>
+          <li class="main-banner__dot active" data-target="#main-banner-slider" data-slide-to="0"></li>
           <li class="main-banner__dot" data-target="#main-banner-slider" data-slide-to="1"></li>
           <li class="main-banner__dot" data-target="#main-banner-slider" data-slide-to="2"></li>
           <li class="main-banner__dot" data-target="#main-banner-slider" data-slide-to="3"></li>
