Creates static categories

--- a/index.html
+++ b/index.html
@@ -253,6 +253,39 @@
       </div>
     </div>
   </div>
+  <div class="categories container carousel slide" data-ride="caousel">
+    <div class="carousel-inner">
+      <!-- Notes: copy code from first carousel-item to other samename blocks -->
+      <div class="carousel-item active row">
+        <div class="categories__item col-3 text-center overflow-hidden">
+          <div class="item__category">Category</div>
+          <div class="categories__title">smartphones</div>
+          <small class="categories__quantity">(25 products)</small>
+          <img src="img/category-1.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+        </div>
+        <div class="categories__item col-3 text-center overflow-hidden">
+          <div class="item__category">Category</div>
+          <div class="categories__title">cameras</div>
+          <small class="categories__quantity">(25 products)</small>
+          <img src="img/category-2.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+        </div>
+        <div class="categories__item col-3 text-center overflow-hidden">
+          <div class="item__category">Category</div>
+          <div class="categories__title">laptops</div>
+          <small class="categories__quantity">(25 products)</small>
+          <img src="img/category-3.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+        </div>
+        <div class="categories__item col-3 text-center overflow-hidden">
+          <div class="item__category">Category</div>
+          <div class="categories__title">headphone</div>
+          <small class="categories__quantity">(25 products)</small>
+          <img src="img/category-4-1.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+        </div>
+      </div>
+      <div class="carousel-item row"></div>
+      <div class="carousel-item row"></div>
+    </div>
+  </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
