--- a/index.html
+++ b/index.html
@@ -257,29 +257,29 @@
     <div class="carousel-inner">
       <!-- Notes: copy code from first carousel-item to other samename blocks -->
       <div class="carousel-item active row">
-        <div class="categories__item col-3 text-center overflow-hidden">
-          <div class="item__category">Category</div>
+        <div class="categories__item col-3 text-center overflow-hidden px-0">
+        <div class="item__category">Category</div>
           <div class="categories__title">smartphones</div>
           <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-1.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+          <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
         </div>
-        <div class="categories__item col-3 text-center overflow-hidden">
-          <div class="item__category">Category</div>
+        <div class="categories__item col-3 text-center overflow-hidden px-0">
+        <div class="item__category">Category</div>
           <div class="categories__title">cameras</div>
           <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-2.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+          <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
         </div>
-        <div class="categories__item col-3 text-center overflow-hidden">
-          <div class="item__category">Category</div>
+        <div class="categories__item col-3 text-center overflow-hidden px-0">
+        <div class="item__category">Category</div>
           <div class="categories__title">laptops</div>
           <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-3.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+          <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
         </div>
-        <div class="categories__item col-3 text-center overflow-hidden">
-          <div class="item__category">Category</div>
+        <div class="categories__item col-3 text-center overflow-hidden px-0">
+        <div class="item__category">Category</div>
           <div class="categories__title">headphone</div>
           <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-4-1.jpg" alt="Product from this categories" class="categories__img d-block mt-3">
+          <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
         </div>
       </div>
       <div class="carousel-item row"></div>
