Makes correct position of categories item according to perfect pixel

--- a/index.html
+++ b/index.html
@@ -256,30 +256,32 @@
   <div class="categories container carousel slide" data-ride="caousel">
     <div class="carousel-inner">
       <!-- Notes: copy code from first carousel-item to other samename blocks -->
-      <div class="carousel-item active row">
-        <div class="categories__item col-3 text-center overflow-hidden px-0">
-        <div class="item__category">Category</div>
-          <div class="categories__title">smartphones</div>
-          <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-        </div>
-        <div class="categories__item col-3 text-center overflow-hidden px-0">
-        <div class="item__category">Category</div>
-          <div class="categories__title">cameras</div>
-          <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-        </div>
-        <div class="categories__item col-3 text-center overflow-hidden px-0">
-        <div class="item__category">Category</div>
-          <div class="categories__title">laptops</div>
-          <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-        </div>
-        <div class="categories__item col-3 text-center overflow-hidden px-0">
-        <div class="item__category">Category</div>
-          <div class="categories__title">headphone</div>
-          <small class="categories__quantity">(25 products)</small>
-          <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+      <div class="carousel-item active">
+        <div class="categories-slide row">
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">smartphones</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">cameras</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">laptops</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">headphone</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
         </div>
       </div>
       <div class="carousel-item row"></div>
