--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       </div>
     </div>
   </div>
-  <div class="categories container carousel slide" data-ride="caousel">
+  <div class="categories container carousel slide" data-ride="carousel" id="categories-slider">
     <div class="carousel-inner">
       <!-- Notes: copy code from first carousel-item to other samename blocks -->
       <div class="carousel-item active">
@@ -284,8 +284,70 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item row"></div>
-      <div class="carousel-item row"></div>
+      <div class="carousel-item">
+        <div class="categories-slide row">
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">smartphones</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">cameras</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">laptops</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">headphone</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="categories-slide row">
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">smartphones</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">cameras</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">laptops</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+          <div class="categories__item col-3 text-center overflow-hidden px-0">
+          <div class="item__category">Category</div>
+            <div class="categories__title">headphone</div>
+            <small class="categories__quantity">(25 products)</small>
+            <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#categories-slider" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#categories-slider" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
   <script src="js/jquery-3.3.1.min.js"></script>
