Disables autoplay in Bootsrap slider in categories section

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       </div>
     </div>
   </div>
-  <div class="categories container carousel slide" data-ride="carousel" id="categories-slider">
+  <div class="categories container carousel slide" data-ride="carousel" id="categories-slider" data-interval="false">
     <div class="carousel-inner">
       <!-- Notes: copy code from first carousel-item to other samename blocks -->
       <div class="carousel-item active">
