Adds slick files to project and link them

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -254,37 +255,37 @@
     </div>
   </div>
   <div class="categories container" id="categories-slider">
-    <div class="categories__item col-3 text-center overflow-hidden px-0">
+    <div class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">smartphones</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
     </div>
-    <div class="categories__item col-3 text-center overflow-hidden px-0">
+    <div class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">cameras</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
     </div>
-    <div class="categories__item col-3 text-center overflow-hidden px-0">
+    <div class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">laptops</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
     </div>
-    <div class="categories__item col-3 text-center overflow-hidden px-0">
+    <div class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">headphone</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
     </div>
-    <div class="categories__item col-3 text-center overflow-hidden px-0">
+    <div class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">smartphones</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
     </div>
-    <div class="categories__item col-3 text-center overflow-hidden px-0">
+    <div class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">cameras</div>
       <small class="categories__quantity">(25 products)</small>
@@ -294,6 +295,7 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/script.js"></script>  
 </body>
 </html>
