Changes tag of categories from div to anchor

--- a/index.html
+++ b/index.html
@@ -255,42 +255,42 @@
     </div>
   </div>
   <div class="categories container" id="categories-slider">
-    <div class="categories__item text-center">
+    <a href="#" class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">smartphones</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-    </div>
-    <div class="categories__item text-center">
+    </a>
+    <a href="#" class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">cameras</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-    </div>
-    <div class="categories__item text-center">
+    </a>
+    <a href="#" class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">laptops</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-3n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-    </div>
-    <div class="categories__item text-center">
+    </a>
+    <a href="#" class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">headphone</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-4n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-    </div>
-    <div class="categories__item text-center">
+    </a>
+    <a href="#" class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">smartphones</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-1n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-    </div>
-    <div class="categories__item text-center">
+    </a>
+    <a href="#" class="categories__item text-center">
       <div class="item__category">Category</div>
       <div class="categories__title">cameras</div>
       <small class="categories__quantity">(25 products)</small>
       <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
-    </div>
+    </a>
   </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
