--- a/index.html
+++ b/index.html
@@ -292,6 +292,27 @@
       <img src="img/category-2n.jpg" alt="Product from this categories" class="categories__img d-block mt-4">
     </a>
   </div>
+  <main class="container">
+    <div class="row">
+      <div class="sidebar col-3"></div>
+      <div class="content col-9">
+        <section class="prod-categories">
+          <h2 class="section-title mb-3">product categories</h2>
+          <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+          <div class="nav nav-pills" id="categories-tabs" role="tablist">
+            <a class="prod-categories__tab nav-item nav-link active" id="categories-1-tab" data-toggle="tab" href="#categories-1" role="tab" aria-controls="categories-1" aria-selected="true">Feautured categories</a>
+            <a class="prod-categories__tab nav-item nav-link" id="categories-tab-2-tab" data-toggle="tab" href="#categories-2" role="tab" aria-controls="categories-2" aria-selected="false">popular categories</a>
+            <a class="prod-categories__tab nav-item nav-link" id="categories-tab-3-tab" data-toggle="tab" href="#categories-3" role="tab" aria-controls="categories-3" aria-selected="false">new categories</a>
+          </div>
+          <div class="tab-content" id="categories-tabsContent">
+            <div class="tab-pane fade show active" id="categories-1" role="tabpanel" aria-labelledby="categories-1-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
+            <div class="tab-pane fade" id="categories-2" role="tabpanel" aria-labelledby="categories-2-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
+            <div class="tab-pane fade" id="categories-3" role="tabpanel" aria-labelledby="categories-3-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </main>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
