Adds and stylizes product categories in tabs content

--- a/index.html
+++ b/index.html
@@ -305,7 +305,72 @@
             <a class="prod-categories__tab nav-item nav-link p-0 mx-3" id="categories-tab-3-tab" data-toggle="tab" href="#categories-3" role="tab" aria-controls="categories-3" aria-selected="false">new categories</a>
           </div>
           <div class="tab-content" id="categories-tabsContent">
-            <div class="tab-pane fade show active" id="categories-1" role="tabpanel" aria-labelledby="categories-1-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
+            <div class="tab-pane fade show active" id="categories-1" role="tabpanel" aria-labelledby="categories-1-tab">
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-1.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-2.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-3.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-4.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-5.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-6.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-7.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <img src="img/prod_categor-8.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <div class="prod-categories__title">Product title 03</div>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+            </div>
             <div class="tab-pane fade" id="categories-2" role="tabpanel" aria-labelledby="categories-2-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
             <div class="tab-pane fade" id="categories-3" role="tabpanel" aria-labelledby="categories-3-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
           </div>
