Deletes excess slick files from project directory

--- a/index.html
+++ b/index.html
@@ -307,12 +307,20 @@
           <div class="tab-content" id="categories-tabsContent">
             <div class="tab-pane fade show active" id="categories-1" role="tabpanel" aria-labelledby="categories-1-tab">
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-1.jpg" class="prod-categories__img mb-4" alt="Product categories image">
+                <a href="#" class="prod-categories__img mb-4">
+                  <img src="img/prod_categor-1.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="wishlist__add-btn"></a>
+                  <a href="#" class="shopping-cart__add-btn"></a>
+                  <a href="#" class="quick-view-btn"></a>
+                </div>
                 <div class="prod-categories__title">Product title 03</div>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
+                .prod-categories__hover-buttons>.
               </div>
               <div class="prod-categories__item text-center col-3">
                 <img src="img/prod_categor-2.jpg" class="prod-categories__img mb-4" alt="Product categories image">
